Begin work on the networking layer.

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,6 +1,6 @@
 
 target 'XirSys', :exclusive => true do
-  pod "XirSys", :path => "../"
+  pod 'XirSys', :path => "../"
 
   pod 'Specta', '~> 0.2.1'
   pod 'Expecta'
