Update the test dependencies and bump the version to 0.3.

--- a/Tests/Podfile
+++ b/Tests/Podfile
@@ -2,6 +2,6 @@
 target 'XirSys', :exclusive => true do
   pod 'XirSys', :path => "../"
 
-  pod 'Specta', '~> 0.2.1'
+  pod 'Specta'
   pod 'Expecta'
 end
